--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@nestjs/common": "^8.2.6",
+    "@nestjs/core": "^8.2.6",
+    "@nestjs/platform-express": "^8.2.6",
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.3",
     "moralis": "^1.1.2",
-    "node-fetch": "^3.2.0"
+    "node-fetch": "^3.2.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.5.2"
   }
 }
