--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "axios": "^0.25.0",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.3",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "moralis": "^1.1.2",
     "node-fetch": "^3.2.0",
     "reflect-metadata": "^0.1.13",
