--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ethers": "^5.5.3",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
+    "helmet": "^5.0.2",
     "moralis": "^1.1.2",
     "node-fetch": "^3.2.0",
     "reflect-metadata": "^0.1.13",
